--- a/CryptoLines/Base.lproj/Main.storyboard
+++ b/CryptoLines/Base.lproj/Main.storyboard
@@ -16,9 +16,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="9bY-lI-ML7">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="9bY-lI-ML7">
                                 <rect key="frame" x="0.0" y="47" width="390" height="763"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="CryptoCell" rowHeight="113" id="5g6-sz-Kty" customClass="CryptoTableViewCell" customModule="CryptoLines" customModuleProvider="target">
@@ -34,7 +33,7 @@
                                                         <constraint firstAttribute="height" constant="20" id="RLh-vd-7SL"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RCK-TN-HqI">
@@ -43,7 +42,7 @@
                                                         <constraint firstAttribute="height" constant="20" id="Swl-yM-NOZ"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -67,6 +66,12 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="9bY-lI-ML7" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="93r-Be-z23"/>
+                            <constraint firstItem="9bY-lI-ML7" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="WTH-sB-IMD"/>
+                            <constraint firstItem="9bY-lI-ML7" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Zxn-ch-cgj"/>
+                            <constraint firstItem="9bY-lI-ML7" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="mYS-3v-khz"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="tableView" destination="9bY-lI-ML7" id="EAH-KR-AU7"/>
